--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbutton">
                 <select class="b1" ><option value="English">English</option>
                     <option value="Hindi">Hindi</option></select>
-                <button class="b2">Sign In</button>
+                <a  class="b2" href="https://www.netflix.com/login">Sign Up</a>
             </div>
         </nav>
         <div class="box">
